--- a/NeuralNetwork.ipynb
+++ b/NeuralNetwork.ipynb
@@ -19,7 +19,7 @@
           "height": 435
         },
         "id": "4DS1KrbiG_9z",
-        "outputId": "1543f173-625f-42be-982d-d9a4d8529cf5"
+        "outputId": "93f7e5d6-6a61-408e-b396-c1ec1f9f7ffc"
       },
       "outputs": [
         {
@@ -56,7 +56,7 @@
       "execution_count": 2,
       "metadata": {
         "id": "TGIA6PTiG_92",
-        "outputId": "840111ce-c8bc-4139-dd87-dad0bf462744",
+        "outputId": "68626d00-5b27-4104-8529-9a9a2041d06a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
@@ -97,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "Z76kLFMYG_93"
       },
@@ -108,10 +108,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "id": "zXEtT1AIG_94",
-        "outputId": "978aa5e4-0041-459f-b8d8-f14f8ac66852",
+        "outputId": "973bb139-e45b-47b2-b602-c179f7de3d62",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -128,7 +128,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ],
       "source": [
@@ -138,10 +138,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "id": "i-9PxeYKG_94",
-        "outputId": "d63bf5db-c156-44cf-beff-348fa39c8165",
+        "outputId": "d9739a8c-ec5e-490f-d9d5-d17b19d84ff4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -158,7 +158,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ],
       "source": [
@@ -169,10 +169,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "id": "7i0f6DdKG_95",
-        "outputId": "130e1588-2a8f-477e-a0d6-cf579533b85c",
+        "outputId": "c8d912cd-948b-4087-addd-23f70c146fd8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -188,7 +188,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ],
       "source": [
@@ -198,10 +198,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "id": "g-LeaEnTG_95",
-        "outputId": "3bd24abf-3247-4d94-fc2f-c9e137e5ea30",
+        "outputId": "d283c58d-1ddd-4f80-eedd-b89524f4899d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -217,7 +217,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ],
       "source": [
@@ -228,10 +228,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "id": "Y2UPaXVYG_95",
-        "outputId": "454e64a7-609e-43e2-ebfd-5eee88e8ed21",
+        "outputId": "c0d7f3d8-94cd-4b88-83ed-bf7e32257b96",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -247,7 +247,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 8
         }
       ],
       "source": [
@@ -258,10 +258,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "id": "4MFfGBC7G_96",
-        "outputId": "53582875-d038-4ab9-95bc-131c52837ac9",
+        "outputId": "94f8af1b-a971-409a-9d2c-f0fd8d9aa078",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -275,7 +275,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 9
         }
       ],
       "source": [
@@ -285,7 +285,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 10,
       "metadata": {
         "id": "k_U8ewaFG_96"
       },
@@ -309,12 +309,29 @@
         "\n",
         "    # activation function\n",
         "    def sigmoid(self, s):\n",
-        "      return 1/(1+np.exp(-s))"
+        "      return 1/(1+np.exp(-s))\n",
+        "\n",
+        "\n",
+        "    def sigmoidPrime(self, s):\n",
+        "      return s * (1 - s)\n",
+        "# Backward Propagate\n",
+        "    def backward(self, X, y, o):\n",
+        "      self.o_error = y - o                                     # error in output\n",
+        "      self.o_delta = self.o_error*self.sigmoidPrime(o)         # applying derivative of sigmoid to error\n",
+        "\n",
+        "      self.z2_error = self.o_delta.dot(self.W2.T)   # z2 error: how much our hidden layer weights contributed to output error\n",
+        "      self.z2_delta = self.z2_error*self.sigmoidPrime(self.z2) # applying derivative of sigmoid to z2 error\n",
+        "\n",
+        "      self.W1 += X.T.dot(self.z2_delta)                        # adjusting first set (input --> hidden) weights\n",
+        "      self.W2 += self.z2.T.dot(self.o_delta)                   # adjusting second set (hidden --> output) weights\n",
+        "    def train(self, X, y):\n",
+        "     o = self.forward(X)\n",
+        "     self.backward(X, y, o)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 20,
       "metadata": {
         "id": "0UNnzwDlG_97"
       },
@@ -325,10 +342,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 21,
       "metadata": {
         "id": "eY7t-YoLG_97",
-        "outputId": "d28cb057-a1f3-4000-ca1a-22f673ba7db9",
+        "outputId": "1be45003-3ccc-4d47-8464-a83bebe0d3e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -338,13 +355,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.14249522],\n",
-              "       [0.22878508],\n",
-              "       [0.17728874]])"
+              "array([[0.51337435],\n",
+              "       [0.51174667],\n",
+              "       [0.53047389]])"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 21
         }
       ],
       "source": [
@@ -354,10 +371,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 22,
       "metadata": {
         "id": "_t-WrUwVG_98",
-        "outputId": "bd7919b9-44d6-4683-ae69-ea5aa92d668b",
+        "outputId": "813126bf-aa89-49a9-e4de-d99a4ca96280",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -373,7 +390,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 22
         }
       ],
       "source": [
@@ -382,53 +399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "tIkhbrpoG_99"
-      },
-      "outputs": [],
-      "source": [
-        "# Backward Propagate"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 15,
-      "metadata": {
-        "id": "CSWFQL9qG_99"
-      },
-      "outputs": [],
-      "source": [
-        "def sigmoidPrime(self, s):\n",
-        "    return s * (1 - s)\n",
-        "\n",
-        "def backward(self, X, y, o):\n",
-        "    self.o_error = y - o                                     # error in output\n",
-        "    self.o_delta = self.o_error*self.sigmoidPrime(o)         # applying derivative of sigmoid to error\n",
-        "\n",
-        "    self.z2_error = self.o_delta.dot(self.W2.T)   # z2 error: how much our hidden layer weights contributed to output error\n",
-        "    self.z2_delta = self.z2_error*self.sigmoidPrime(self.z2) # applying derivative of sigmoid to z2 error\n",
-        "\n",
-        "    self.W1 += X.T.dot(self.z2_delta)                        # adjusting first set (input --> hidden) weights\n",
-        "    self.W2 += self.z2.T.dot(self.o_delta)                   # adjusting second set (hidden --> output) weights"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {
-        "id": "ao0AyqZ3G_9-"
-      },
-      "outputs": [],
-      "source": [
-        "def train(self, X, y):\n",
-        "    o = self.forward(X)\n",
-        "    self.backward(X, y, o)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 23,
       "metadata": {
         "id": "E1PXaQlGG_9-"
       },
@@ -441,7 +412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 24,
       "metadata": {
         "id": "bPHtevDLG_9_"
       },
@@ -455,18 +426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
-      "metadata": {
-        "id": "HhgtZEUNG_9_"
-      },
-      "outputs": [],
-      "source": [
-        "NN = Neural_Network()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 26,
       "metadata": {
         "id": "8PE-v23lG_9_"
       },
@@ -479,10 +439,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 27,
       "metadata": {
         "id": "O01VHiBYG_9_",
-        "outputId": "45323211-0e46-49ad-faf9-3d6569436c9a",
+        "outputId": "4a3ca2a0-2250-42b7-ec90-e291d8884f45",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -493,15 +453,15 @@
           "name": "stdout",
           "text": [
             "iteration:0\n",
-            "Loss: 0.2098924834007817\n",
+            "Loss: 0.13862794462159242\n",
             "\n",
             "\n",
             "iteration:1\n",
-            "Loss: 0.2098924834007817\n",
+            "Loss: 0.09363384995202266\n",
             "\n",
             "\n",
             "iteration:2\n",
-            "Loss: 0.2098924834007817\n",
+            "Loss: 0.06491747665172197\n",
             "\n",
             "\n"
           ]
@@ -513,7 +473,7 @@
         "  k=np.mean(np.square(y - NN.forward(X)))    # mean sum squared loss\n",
         "  print (\"Loss: \" + str(k))\n",
         "  print (\"\\n\")\n",
-        "  #train(X, y)"
+        "  NN.train(X, y)"
       ]
     },
     {
